--- a/index.html
+++ b/index.html
@@ -228,15 +228,27 @@
 							Schedule for the Main Stage. All times are BST.
 						</p>
 						<iframe
-							src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23111827&ctz=Europe%2FLondon&mode=AGENDA&showTitle=0&showNav=0&showPrint=0&showTabs=0&showCalendars=0&showTz=0&src=c_e2de1e51f2244249dfa6d03551572c918361acc797241ea00445558145417088%40group.calendar.google.com&color=%2310B981"
+							src="https://calendar.google.com/calendar/embed?
+                            height=600
+                            &wkst=1
+                            &bgcolor=%23111827
+                            &ctz=Europe%2FLondon
+                            &mode=AGENDA
+                            &showTitle=0
+                            &showNav=1
+                            &showPrint=0
+                            &showTabs=0
+                            &showCalendars=1
+                            &showTz=0
+                            &src=c_e2de1e51f2244249dfa6d03551572c918361acc797241ea00445558145417088%40group.calendar.google.com
+                            &color=%2310B981"
 							style="border-width: 0"
 							width="100%"
 							height="600"
 							frameborder="0"
 							scrolling="no"
 							class="rounded-lg shadow-lg"
-						>
-						</iframe>
+						></iframe>
 					</div>
 					<!-- Woodland Stage Calendar -->
 					<div id="woodland-stage" class="tab-content">
@@ -245,15 +257,27 @@
 							are BST.
 						</p>
 						<iframe
-							src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23111827&ctz=Europe%2FLondon&mode=AGENDA&showTitle=0&showNav=0&showPrint=0&showTabs=0&showCalendars=0&showTz=0&src=c_55a298a83fa27a9e342735749963e6e7379e54a3779e5af42c8d5236ab303496%40group.calendar.google.com&color=%2334D399"
+							src="https://calendar.google.com/calendar/embed?
+                            height=600
+                            &wkst=1
+                            &bgcolor=%23111827
+                            &ctz=Europe%2FLondon
+                            &mode=AGENDA
+                            &showTitle=0
+                            &showNav=1
+                            &showPrint=0
+                            &showTabs=0
+                            &showCalendars=1
+                            &showTz=0
+                            &src=c_e2de1e51f2244249dfa6d03551572c918361acc797241ea00445558145417088%40group.calendar.google.com
+                            &color=%2310B981"
 							style="border-width: 0"
 							width="100%"
 							height="600"
 							frameborder="0"
 							scrolling="no"
 							class="rounded-lg shadow-lg"
-						>
-						</iframe>
+						></iframe>
 					</div>
 				</div>
 			</div>
