--- a/index.html
+++ b/index.html
@@ -234,13 +234,14 @@
                             &bgcolor=%23111827
                             &ctz=Europe%2FLondon
                             &mode=AGENDA
-                            &showTitle=0
+                            &title=Festival%20Test
+                            &showTitle=1
                             &showNav=1
                             &showPrint=0
                             &showTabs=0
                             &showCalendars=1
                             &showTz=0
-                            &src=c_e2de1e51f2244249dfa6d03551572c918361acc797241ea00445558145417088%40group.calendar.google.com
+                            &src=Y181Zjk1YTYwOTU3OWZiMTgyNDk0MmI5YjMzYzVlMTE1M2ExMDljZWViYjc2MTY4YWQ0NzUxNDUyZDc5Y2IyNDhlQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20
                             &color=%2310B981"
 							style="border-width: 0"
 							width="100%"
@@ -263,13 +264,14 @@
                             &bgcolor=%23111827
                             &ctz=Europe%2FLondon
                             &mode=AGENDA
-                            &showTitle=0
+                            &title=Festival%20Test
+                            &showTitle=1
                             &showNav=1
                             &showPrint=0
                             &showTabs=0
                             &showCalendars=1
                             &showTz=0
-                            &src=c_e2de1e51f2244249dfa6d03551572c918361acc797241ea00445558145417088%40group.calendar.google.com
+                            &src=Y181Zjk1YTYwOTU3OWZiMTgyNDk0MmI5YjMzYzVlMTE1M2ExMDljZWViYjc2MTY4YWQ0NzUxNDUyZDc5Y2IyNDhlQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20
                             &color=%2310B981"
 							style="border-width: 0"
 							width="100%"
