Calendar bug fix

--- a/index.html
+++ b/index.html
@@ -228,21 +228,7 @@
 							Schedule for the Main Stage. All times are BST.
 						</p>
 						<iframe
-							src="https://calendar.google.com/calendar/embed?
-                            height=600
-                            &wkst=1
-                            &bgcolor=%23111827
-                            &ctz=Europe%2FLondon
-                            &mode=AGENDA
-                            &title=Festival%20Test
-                            &showTitle=1
-                            &showNav=1
-                            &showPrint=0
-                            &showTabs=0
-                            &showCalendars=1
-                            &showTz=0
-                            &src=Y181Zjk1YTYwOTU3OWZiMTgyNDk0MmI5YjMzYzVlMTE1M2ExMDljZWViYjc2MTY4YWQ0NzUxNDUyZDc5Y2IyNDhlQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20
-                            &color=%2310B981"
+							src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23111827&ctz=Europe%2FLondon&mode=AGENDA&title=Festival%20Test&showTitle=1&showNav=1&showPrint=0&showTabs=0&showCalendars=1&showTz=0&src=Y181Zjk1YTYwOTU3OWZiMTgyNDk0MmI5YjMzYzVlMTE1M2ExMDljZWViYjc2MTY4YWQ0NzUxNDUyZDc5Y2IyNDhlQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&color=%2310B981"
 							style="border-width: 0"
 							width="100%"
 							height="600"
@@ -258,21 +244,7 @@
 							are BST.
 						</p>
 						<iframe
-							src="https://calendar.google.com/calendar/embed?
-                            height=600
-                            &wkst=1
-                            &bgcolor=%23111827
-                            &ctz=Europe%2FLondon
-                            &mode=AGENDA
-                            &title=Festival%20Test
-                            &showTitle=1
-                            &showNav=1
-                            &showPrint=0
-                            &showTabs=0
-                            &showCalendars=1
-                            &showTz=0
-                            &src=Y181Zjk1YTYwOTU3OWZiMTgyNDk0MmI5YjMzYzVlMTE1M2ExMDljZWViYjc2MTY4YWQ0NzUxNDUyZDc5Y2IyNDhlQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20
-                            &color=%2310B981"
+							src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23111827&ctz=Europe%2FLondon&mode=AGENDA&title=Festival%20Test&showTitle=1&showNav=1&showPrint=0&showTabs=0&showCalendars=1&showTz=0&src=Y181Zjk1YTYwOTU3OWZiMTgyNDk0MmI5YjMzYzVlMTE1M2ExMDljZWViYjc2MTY4YWQ0NzUxNDUyZDc5Y2IyNDhlQGdyb3VwLmNhbGVuZGFyLmdvb2dsZS5jb20&color=%2310B981"
 							style="border-width: 0"
 							width="100%"
 							height="600"
