--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 			}
 		</style>
 	</head>
-	<body class="bg-gray-900 text-gray-200">
+	<body class="bg-gray-900 text-gray-200 overflow-x-hidden">
 		<!-- Header & Navigation -->
 		<header class="bg-gray-900/80 backdrop-blur-md sticky top-0 z-50">
 			<nav
